5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4153/executions/1836_1273.log
== TEST (2019-06-30 02:42:31) 
-- CODE:
from numpy import*
from numpy.linalg import*

x1 + 380 = x2 + 430 = A
x2 + 540 = x3 + 420 = B
x3 + 470 = 420 + 400 = C
x4 + x1 = 420 + 450 =D

m = arrey([[x1,-x2,0,0], [0,x2,-350,0], [0,0,350,0], [x1,0,0,x4]])
print (m)
-- ERROR:
File "XXXX", line 4
    x1 + 380 = x2 + 430 = A
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 02:48:18) 
-- CODE:
from numpy import*
from numpy.linalg import*

m = arrey([[x1,-x2,0,0], 
			  [0,x2,-350,0],
			  [0,0,350,0],w
			  [x1,0,0,x4]])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 02:48:36) 
-- CODE:
from numpy import*
from numpy.linalg import*

m = array([[x1,-x2,0,0], 
			  [0,x2,-350,0],
			  [0,0,350,0],w
			  [x1,0,0,x4]])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 02:48:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

m = array([[x1,-x2,0,0], 
			  [0,x2,-350,0],
			  [0,0,350,0],w
			  [x1,0,0,x4]])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 03:14:12) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array ([[1,-1,0,0],
			  [0,1,-1,0],
			  [0,0,0,1],
			  [1,0,0,1]])
r = array ([50,-120,350,870])
D = det (v)
a = v [:,0]
b = v [:,1]
c = v [:,2]
d = v [:,3]
d1 = 0
d2 = 0
d3 = 0
d4 = 0
for i in range(v[0,:]):
   if (i == 0):
      v[:,0] = r.T
      d1 = det(v)
   elif (i == 1):
      v[:,0] = a
      v [:,1] = r.T
      d2 = det(v)
   elif (i==2):
      v [:,1]= b
      v [:,2] = r.T
      d3 = det (v)
   elif (i == 3):
      v [:,2] = c
      v [:,3] = r.T
      d4 = det(v)
rep = array ([d1/D,d2/D,d3/D,d4/D])
print (resp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 03:14:50) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array ([[1,-1,0,0],
			  [0,1,-1,0],
			  [0,0,0,1],
			  [1,0,0,1]])
r = array ([50,-120,350,870])
D = det (v)
a = v [:,0]
b = v [:,1]
c = v [:,2]
d = v [:,3]
d1 = 0
d2 = 0
d3 = 0
d4 = 0
for i in range(size (v[0,:])):
   if (i == 0):
      v[:,0] = r.T
      d1 = det(v)
   elif (i == 1):
      v[:,0] = a
      v [:,1] = r.T
      d2 = det(v)
   elif (i==2):
      v [:,1]= b
      v [:,2] = r.T
      d3 = det (v)
   elif (i == 3):
      v [:,2] = c
      v [:,3] = r.T
      d4 = det(v)
rep = array ([d1/D,d2/D,d3/D,d4/D])
print (resp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 03:15:15) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array ([[1,-1,0,0],
			  [0,1,-1,0],
			  [0,0,0,1],
			  [1,0,0,1]])
r = array ([50,-120,350,870])
D = det (v)
a = v [:,0]
b = v [:,1]
c = v [:,2]
d = v [:,3]
d1 = 0
d2 = 0
d3 = 0
d4 = 0
for i in range(size (v[0,:])):
   if (i == 0):
      v[:,0] = r.T
      d1 = det(v)
   elif (i == 1):
      v[:,0] = a
      v [:,1] = r.T
      d2 = det(v)
   elif (i==2):
      v [:,1]= b
      v [:,2] = r.T
      d3 = det (v)
   elif (i == 3):
      v [:,2] = c
      v [:,3] = r.T
      d4 = det(v)
rep = array ([d1/D,d2/D,d3/D,d4/D])
print (rep)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 03:17:56) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array ([[1,-1,0,0],
			  [0,1,-1,0],
			  [0,0,0,1],
			  [1,0,0,1]])
v2 = v
v3 = v
v4 = v
r = array ([50,-120,350,870])
D = det (v)
d1 = 0
d2 = 0
d3 = 0
d4 = 0
for i in range(size (v[0,:])):
   if (i == 0):
      v[:,0] = r.T
      d1 = det(v)
   elif (i == 1):
      v2 [:,1] = r.T
      d2 = det(v2)
   elif (i==2):
      v3 [:,2] = r.T
      d3 = det (v3)
   elif (i == 3):
      v4 [:,3] = r.T
      d4 = det(v4)
rep = array ([d1/D,d2/D,d3/D,d4/D])
print (rep)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 03:27:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array ([[1,-1,0,0],
			  [0,1,-1,0],
			  [0,0,1,0],
			  [1,0,0,1]])
r = array ([50,-120,350,870])
D = det (v)
for i in range(shape (v)[0]):
   if (i == 0):
      v [:,0] = r.T
      d1 = det (v)
print (d1/D)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 03:28:56) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array ([[1,-1,0,0],
			  [0,1,-1,0],
			  [0,0,1,0],
			  [1,0,0,1]])
r = array ([50,-120,350,870])
D = det (v)
for i in range(shape (v)[0]):
   if (i == 0):
      v [:,0] = r.T
      d1 = det (v)
print (round (d1/D,0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 03:32:02) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array ([[1,-1,0,0],
			  [0,1,-1,0],
			  [0,0,1,0],
			  [1,0,0,1]])
v2 = v
r = array ([50,-120,350,870])
D = det (v)
for i in range(shape (v)[0]):
   if (i == 0):
      v [:,0] = r.T
      d1 = det (v)
   elif (i == 1):
      v2 [:,1] = r.T
      d2 = det (v2)
print (d2/D)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 03:35:45) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array ([[1,-1,0,0],
			  [0,1,-1,0],
			  [0,0,1,0],
			  [1,0,0,1]])
v2 = v
r = array ([50,-120,350,870])
D = det (v)
for i in range(shape (v)[0]):
   if (i == 0):
      v [:,0] = r.T
      d1 = det (v)
   elif (i == 1):
      v2 [:,1] = r.T
      d2 = det (v2)
print (d2/D)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 03:39:42) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array ([[1,-1,0,0],
			  [0,1,-1,0],
			  [0,0,1,0],
			  [1,0,0,1]])
a = array (v [:,0])
b = array (v [:,1])
c = array (v [:,2])
d = array (v [:,3])
r = array ([50,-120,350,870])
D = det (v)
for i in range(shape (v)[0]):
   if (i == 0):
      v [:,0] = r.T
      d1 = det (v)
   elif (i == 1):
      v [:,0] = a
      v [:,1] = r.T
      d2 = det (v)
print (d2/D)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 03:42:28) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array ([[1,-1,0,0],
			  [0,1,-1,0],
			  [0,0,1,0],
			  [1,0,0,1]])
a = array (v [:,0])
b = array (v [:,1])
c = array (v [:,2])
d = array (v [:,3])
r = array ([50,-120,350,870])
D = det (v)
for i in range(shape (v)[0]):
   if (i == 0):
      v [:,0] = r.T
      d1 = det (v)
   elif (i == 1):
      v [:,0] = a
      v [:,1] = r.T
      d2 = det (v)
   elif (i == 2):
      v [:,1] = b
      v [:,2] = r.T
      d3 = det(v)
print (d3/D)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 03:45:26) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array ([[1,-1,0,0],
			  [0,1,-1,0],
			  [0,0,1,0],
			  [1,0,0,1]])
a = array (v [:,0])
b = array (v [:,1])
c = array (v [:,2])
d = array (v [:,3])
r = array ([50,-120,350,870])
D = det (v)
for i in range(shape (v)[0]):
   if (i == 0):
      v [:,0] = r.T
      d1 = round(det (v),0)
   elif (i == 1):
      v [:,0] = a
      v [:,1] = r.T
      d2 = round(det (v),0)
   elif (i == 2):
      v [:,1] = b
      v [:,2] = r.T
      d3 = round(det(v),0)
   elif (i == 3):
      v [:,2] = c
      v [:,3] = r.T
      d4 = round(det (v),0)
print (d4/D)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 03:47:15) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array ([[1,-1,0,0],
			  [0,1,-1,0],
			  [0,0,1,0],
			  [1,0,0,1]])
a = array (v [:,0])
b = array (v [:,1])
c = array (v [:,2])
d = array (v [:,3])
r = array ([50,-120,350,870])
D = det (v)
for i in range(shape (v)[0]):
   if (i == 0):
      v [:,0] = r.T
      d1 = round(det (v),0)
   elif (i == 1):
      v [:,0] = a
      v [:,1] = r.T
      d2 = round(det (v),0)
   elif (i == 2):
      v [:,1] = b
      v [:,2] = r.T
      d3 = round(det(v),0)
   elif (i == 3):
      v [:,2] = c
      v [:,3] = r.T
      d4 = round(det (v),0)
resp = array ([d1/D,d2/D,d3/D,d4/D])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 03:47:57) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array ([[1,-1,0,0],
			  [0,1,-1,0],
			  [0,0,1,0],
			  [1,0,0,1]])
a = array (v [:,0])
b = array (v [:,1])
c = array (v [:,2])
d = array (v [:,3])
r = array ([50,-120,350,870])
D = det (v)
for i in range(shape (v)[0]):
   if (i == 0):
      v [:,0] = r.T
      d1 = round(det (v),0)
   elif (i == 1):
      v [:,0] = a
      v [:,1] = r.T
      d2 = round(det (v),0)
   elif (i == 2):
      v [:,1] = b
      v [:,2] = r.T
      d3 = round(det(v),0)
   elif (i == 3):
      v [:,2] = c
      v [:,3] = r.T
      d4 = round(det (v),0)
resp = array ([d1/D,d2/D,d3/D,d4/D])
print (resp)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 03:48:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = array ([[1,-1,0,0],
			  [0,1,-1,0],
			  [0,0,1,0],
			  [1,0,0,1]])
a = array (v [:,0])
b = array (v [:,1])
c = array (v [:,2])
d = array (v [:,3])
r = array ([50,-120,350,870])
D = det (v)
for i in range(shape (v)[0]):
   if (i == 0):
      v [:,0] = r.T
      d1 = round(det (v),0)
   elif (i == 1):
      v [:,0] = a
      v [:,1] = r.T
      d2 = round(det (v),0)
   elif (i == 2):
      v [:,1] = b
      v [:,2] = r.T
      d3 = round(det(v),0)
   elif (i == 3):
      v [:,2] = c
      v [:,3] = r.T
      d4 = round(det (v),0)
resp = array ([d1/D,d2/D,d3/D,d4/D])
print (resp)
-- EXECUTION TIME:
1.09922
-- TEST CASE 1:
---- input:
Não_há
---- correct output:
[280. 230. 350. 590.]
---- user output:
[280. 230. 350. 590.]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
